src/styles/global.css
@import "tailwindcss";

* {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

@theme {
  --font-nudicaMono: "nudica_monomedium", "Azeret Mono", ui-monospace, SFMono-Regular;
  --font-display: "nudicamedium", "Space Grotesk", ui-sans-serif, system-ui;

  --text-shadow-glow:
    0 0 5px #f0b100, 0 0 15px #f0b100, 0 0 30px #f0b100, 0 0 60px rgba(255, 0, 0, 0.5);

  --animate-flicker: flicker 3s infinite;

  --text-xxs: 0.6875rem;
  --text-xxs--line-height: calc(1 / 0.6875);

  --color-text-primary: theme(colors.gray.100);
  --color-text-body: theme(colors.gray.400);
  --color-text-muted: theme(colors.gray.500);

  --color-bg-main: theme(colors.gray.950);
}

@layer base {
  body {
    background-color: var(--color-bg-main);
    font-family: var(--font-nudicaMono);
    color: var(--color-text-primary);
    ::selection {
      background-color: var(--color-text-primary);
      color: var(--color-bg-main);
    }
  }
  p {
    font-family: var(--font-nudicaMono);
  }
}

@keyframes flicker {
  0%,
  100% {
    opacity: 1;
  }
  2% {
    opacity: 0.9;
  }
  4% {
    opacity: 0.9;
  }
  6% {
    opacity: 0.1;
  }
  8% {
    opacity: 1;
  }
  22% {
    opacity: 0.8;
  }
  24% {
    opacity: 1;
  }
  42% {
    opacity: 0.9;
  }
  44% {
    opacity: 0.6;
  }
  46% {
    opacity: 1;
  }
  62% {
    opacity: 0.7;
  }
  64% {
    opacity: 1;
  }
  82% {
    opacity: 0.4;
  }
  84% {
    opacity: 1;
  }
}

